[gd_scene load_steps=14 format=3 uid="uid://7se4d1fsjb7j"]

[ext_resource type="Script" path="res://Scripts/MainMenu.gd" id="1_rb2v4"]
[ext_resource type="Shader" path="res://Scripts/Cloud.gdshader" id="2_d3swb"]
[ext_resource type="Texture2D" uid="uid://c50mm12apfpa4" path="res://Assets/backgroundColorGrass.png" id="2_dgl01"]
[ext_resource type="Theme" uid="uid://yiimtybaehom" path="res://Assets/buttons.tres" id="3_6plkw"]
[ext_resource type="Script" path="res://Scripts/LabelAnimation.gd" id="4_8y57f"]
[ext_resource type="Script" path="res://Scripts/VboxAnimation.gd" id="5_py3tg"]
[ext_resource type="Texture2D" uid="uid://blevxuq006eyq" path="res://Assets/cloud1.png" id="5_xhvnj"]
[ext_resource type="AudioStream" uid="uid://dmaefxowcgfrr" path="res://Assets/Audio/main_menu_tune.mp3" id="8_q0fwh"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_42uul"]
shader = ExtResource("2_d3swb")

[sub_resource type="SystemFont" id="SystemFont_sj0c1"]

[sub_resource type="LabelSettings" id="LabelSettings_jipej"]
font = SubResource("SystemFont_sj0c1")
font_size = 100
outline_size = 11
outline_color = Color(0, 0, 0.784314, 1)

[sub_resource type="Theme" id="Theme_3hn4t"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_iwel0"]
shader = ExtResource("2_d3swb")

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_rb2v4")

[node name="Background" type="TextureRect" parent="."]
texture_repeat = 2
material = SubResource("ShaderMaterial_42uul")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_dgl01")

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -401.0
offset_top = -497.0
offset_right = 401.0
offset_bottom = -360.0
grow_horizontal = 2
grow_vertical = 2
text = "Cool Math Game"
label_settings = SubResource("LabelSettings_jipej")
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("4_8y57f")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -251.0
offset_top = -103.0
offset_right = 249.0
offset_bottom = 497.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_3hn4t")
theme_override_constants/separation = 18
alignment = 1
script = ExtResource("5_py3tg")

[node name="Play2" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
theme = ExtResource("3_6plkw")
theme_override_font_sizes/font_size = 30
text = "Compare Numbers
"

[node name="Play3" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
theme = ExtResource("3_6plkw")
theme_override_font_sizes/font_size = 30
text = "Order Numbers
"

[node name="Play4" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
theme = ExtResource("3_6plkw")
theme_override_font_sizes/font_size = 30
text = "Compose Numbers"

[node name="Play" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
theme = ExtResource("3_6plkw")
theme_override_font_sizes/font_size = 30
text = "Arcade Mode
"

[node name="Exit" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
theme = ExtResource("3_6plkw")
theme_override_font_sizes/font_size = 30
text = "Exit
"

[node name="Cloud1" type="TextureRect" parent="."]
texture_repeat = 2
material = SubResource("ShaderMaterial_iwel0")
layout_mode = 0
offset_right = 1081.0
offset_bottom = 413.0
texture = ExtResource("5_xhvnj")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_q0fwh")

[connection signal="pressed" from="VBoxContainer/Play2" to="." method="_on_play_2_pressed"]
[connection signal="pressed" from="VBoxContainer/Play3" to="." method="_on_play_3_pressed"]
[connection signal="pressed" from="VBoxContainer/Play4" to="." method="_on_play_4_pressed"]
[connection signal="pressed" from="VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="VBoxContainer/Exit" to="." method="_on_exit_pressed"]
[connection signal="finished" from="AudioStreamPlayer2D" to="." method="_on_audio_stream_player_2d_finished"]
